--- a/index.html
+++ b/index.html
@@ -263,7 +263,8 @@
 
         <div class="section-title">
           <h2>Ring me!</h2>
-          <p> I appreciate you visiting my personal website and taking the time to explore my CV. Please feel free to browse through my projects and achievements. If you have any inquiries or collaboration opportunities, don't hesitate to reach out to me.
+          <div data-aos="fade-up">
+            <p> I appreciate you visiting my personal website and taking the time to explore my CV. Please feel free to browse through my projects and achievements. If you have any inquiries or collaboration opportunities, don't hesitate to reach out to me.
             Let's work together to push the boundaries of web development and create exceptional online experiences.</p>
           </div>
 
