--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
       <div class="profile">
         <img src="assets/img/mir-profile.jpg" alt="" class="img-fluid rounded-circle">
         <div class="social-links mt-3 text-center">
-          <a href=":https://www.facebook.com/MirxPro" class="facebook"><i class="bx bxl-facebook"></i></a>
+          <a href="https://www.facebook.com/MirxPro" class="facebook"><i class="bx bxl-facebook"></i></a>
           <a href="mailto:mirtoot22@gmail.com" class="google-plus"><i class="bx bxl-gmail"></i></a>
           <a href="https://github.com/NeilAlphad" class="github"><i class="bx bxl-github"></i></a>
         </div>
